--- a/desafios/d011-site cordel/style.css
+++ b/desafios/d011-site cordel/style.css
@@ -1,11 +1,15 @@
+@charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
 body{
     margin: 0;
+    min-height: 100vh;
 }
 
 header{
-    height: 170px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color: black;
     color: white;
     display: flex;
