--- a/desafios/d011-site cordel/style.css
+++ b/desafios/d011-site cordel/style.css
@@ -45,13 +45,16 @@ section{
     font: normal 3.5vw "Sriracha";
 }
 .imagem{
-    box-shadow: inset -1px 0px 5px 3px rgba(0, 0, 0, 0.363);
+    box-shadow: inset 6px 6px 13px 0 rgba(0, 0, 0, 0.49);
+    background-size: cover;
+    background-attachment: fixed;
 }
 #img1{
-    background: white url(img/background001.jpg) no-repeat fixed right/cover;
+    background-image: url(img/background001.jpg);
+    background-position: right center;
 }
 #img2{
-    background: white url(img/background002.jpg) no-repeat fixed right/cover;
+    background-image: url(img/background002.jpg);
 }
 .imagem > p{
     background-color: rgba(0, 0, 0, 0.452);
